js/js.translator/testData/incremental/invalidation/genericFunctions/lib1/l1.3.kt
fun <T: Comparable<T>> foo(x: T) = x
